refactor(*): Migrated MFE TSV and MFE Weather to ESM Module

--- a/Platform as a service/Front end integration/Block - Micro Front end integration/Blocks - Showcase - Angular/src/app/components/tsv-container/tsv-container.component.html
+++ b/Platform as a service/Front end integration/Block - Micro Front end integration/Blocks - Showcase - Angular/src/app/components/tsv-container/tsv-container.component.html
@@ -2,7 +2,7 @@
   For more technical information:
   <a
     target="_blank"
-    href="https://blocks-pp.geosys.com/time-series-viewer/v1/assets/docs/timeseriesviewer-doc.md"
+    href="https://blocks.geosys.com/time-series-viewer/v1/assets/docs/timeseriesviewer-doc.md"
     >Doc</a
   >
 </p>
